Implement rff model learning in 1D setting

--- a/pilco/pilco_main.ipynb
+++ b/pilco/pilco_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,15 +31,15 @@
     "\n",
     "from replay_buffer import ReplayBuffer\n",
     "from constants import SEED\n",
-    "from policy import policy_grad, lr_gradients, trajectory_value\n",
+    "from policy import policy_grad, lr_gradients, get_sequence_rewards\n",
     "from pilco_utils import get_trajectories, rollout_episode\n",
     "from rff import phi_X, phi_X_batch\n",
-    "from trans_model import prior, train_transition_models, predict, predict_batch"
+    "from trans_model import prior, train_transition_models, predict, lklhood_grad, marg_lklhood"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,21 +69,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000\n"
+      "7500\n"
      ]
     }
    ],
    "source": [
-    "INIT_EPISODES = 1000\n",
+    "INIT_EPISODES = 500\n",
     "BUFFER_CAPACITY = 1000\n",
-    "HORIZON = 20\n",
+    "HORIZON = 15\n",
     "\n",
     "replay_buffer = ReplayBuffer(capacity=BUFFER_CAPACITY)\n",
     "\n",
@@ -111,28 +111,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "theta = jnp.full((state_dim + 1,), .9)\n",
-    "BETA = .1\n",
+    "# BETAS = jnp.full((4,), 20.)\n",
+    "BETAS = jnp.load('optimal_beta.npy')\n",
     "ALPHA = .3\n",
     "N = 1000\n",
     "NUM_FEATURES = 1000 \n",
-    "lengthscales = jnp.full((NUM_FEATURES,), .1)\n",
-    "coefs = jnp.full_like(lengthscales, 0.000001)\n",
+    "# lengthscales = jnp.asarray(np.load('optimal_lengthscales.npy'))\n",
+    "lengthscales = jnp.full((4, NUM_FEATURES, 1), .6) \n",
+    "# coefs = jnp.full_like(lengthscales, 0.3)\n",
+    "coefs = jnp.load('optimal_coefs.npy')\n",
     "\n",
     "model_d1 = prior(NUM_FEATURES, alpha=ALPHA)\n",
     "model_d2 = prior(NUM_FEATURES, alpha=ALPHA)\n",
     "model_d3 = prior(NUM_FEATURES, alpha=ALPHA)\n",
     "model_d4 = prior(NUM_FEATURES, alpha=ALPHA)\n",
     "\n",
-    "trans_models = [model_d1, model_d2, model_d3, model_d4]\n",
+    "trans_models_pre = [model_d1, model_d2, model_d3, model_d4]\n",
     "\n",
-    "trans_models = train_transition_models(\n",
-    "    replay_buffer, BETA, trans_models, NUM_FEATURES, lengthscales, coefs, SEED\n",
+    "trans_models_post = train_transition_models(\n",
+    "    replay_buffer, BETAS, trans_models_pre, NUM_FEATURES, lengthscales, coefs, SEED\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimise Transition Model Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 0, objective: 371.58062744140625\n",
+      "Step 5, objective: 369.9600830078125\n",
+      "Step 10, objective: 368.3751525878906\n",
+      "Step 15, objective: 366.8271484375\n",
+      "Step 20, objective: 365.3169250488281\n",
+      "Step 25, objective: 363.8446960449219\n",
+      "Step 30, objective: 362.410400390625\n",
+      "Step 35, objective: 361.01336669921875\n",
+      "Step 40, objective: 359.6528625488281\n"
+     ]
+    }
+   ],
+   "source": [
+    "key = SEED\n",
+    "cur_keys = jrandom.split(key, num=3)\n",
+    "N = 1000\n",
+    "SEQ_LEN = 20\n",
+    "MODEL_NOISE = 0.1\n",
+    "\n",
+    "transitions = replay_buffer.memory[:SEQ_LEN]\n",
+    "states = jnp.array(list(map(lambda t: t.state, transitions)))\n",
+    "actions = jnp.array(list(map(lambda t: t.action, transitions)))\n",
+    "next_states = jnp.array(list(map(lambda t: t.next_state, transitions)))\n",
+    "\n",
+    "params = jnp.array([BETAS])\n",
+    "optimizer = optax.chain(\n",
+    "    optax.adam(learning_rate=0.05),\n",
+    "    # optax.scale(-1.0)\n",
+    ")\n",
+    "opt_state = optimizer.init(params)\n",
+    "\n",
+    "for i in range(100):\n",
+    "    trans = jrandom.normal(cur_keys[0], shape=(N, SEQ_LEN, 4))\n",
+    "    omega = jrandom.normal(cur_keys[1], shape=(N, NUM_FEATURES, 2))\n",
+    "    phi = jrandom.uniform(cur_keys[2], minval=0, maxval=2 * jnp.pi, shape=(N, NUM_FEATURES, 1))\n",
+    "\n",
+    "    grads = lklhood_grad(states, NUM_FEATURES, lengthscales, coefs, params[0], MODEL_NOISE, 4, actions, next_states, trans, omega, phi, *trans_models_post)\n",
+    "\n",
+    "    updates, opt_state = optimizer.update(grads, opt_state, params)\n",
+    "    params = optax.apply_updates(params, updates)\n",
+    "\n",
+    "    if i % 5 == 0:\n",
+    "        objective = marg_lklhood(states, NUM_FEATURES, lengthscales, coefs, params[0], MODEL_NOISE, actions, next_states, trans, omega, phi, *trans_models_post)\n",
+    "        print(f\"Step {i}, objective: {objective}\")\n",
+    "\n",
+    "np.save('optimal_beta.npy', np.asarray(params[0]))"
    ]
   },
   {
@@ -148,37 +215,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lengthscales = jnp.asarray(np.load('optimal_lengthscales.npy'))\n",
+    "\n",
     "start_state = env.reset()\n",
-    "action = jnp.array([.1])\n",
+    "action = jnp.array([.5])\n",
     "N = 1000\n",
     "\n",
-    "model_d1, model_d2, model_d3, model_d4 = trans_models\n",
-    "\n",
     "@jit\n",
-    "def pred(trans_eps, state_eps, omega, phi):\n",
-    "    model_input = jnp.stack([start_state, jnp.full((4,), action)]).T\n",
+    "def pred(start_st, trans_eps, state_eps, omega, phi, m_d1, m_d2, m_d3, m_d4):\n",
+    "    model_input = jnp.stack([start_st, jnp.full((4,), action)]).T\n",
     "    input = phi_X_batch(model_input, NUM_FEATURES, lengthscales, coefs, omega, phi)\n",
     "\n",
-    "    means = jnp.concatenate([model_d1[0], model_d2[0], model_d3[0], model_d4[0]])\n",
-    "    covs = jnp.diag(jnp.concatenate([\n",
-    "        jnp.diag(model_d1[1]), jnp.diag(model_d2[1]), jnp.diag(model_d3[1]), jnp.diag(model_d4[1])\n",
-    "    ]))\n",
+    "    means = jnp.concatenate([m_d1[0], m_d2[0], m_d3[0], m_d4[0]])\n",
+    "    covs = jnp.zeros((means.shape[0], means.shape[0]))\n",
+    "    covs = covs.at[:NUM_FEATURES, :NUM_FEATURES].set(m_d1[1])\n",
+    "    covs = covs.at[NUM_FEATURES:NUM_FEATURES * 2, NUM_FEATURES:NUM_FEATURES * 2].set(m_d2[1])\n",
+    "    covs = covs.at[NUM_FEATURES * 2:NUM_FEATURES * 3, NUM_FEATURES * 2:NUM_FEATURES * 3].set(m_d3[1])\n",
+    "    covs = covs.at[NUM_FEATURES * 3:NUM_FEATURES * 4, NUM_FEATURES * 3:NUM_FEATURES * 4].set(m_d4[1])\n",
     "    d1, d2, d3, d4 = predict(means, covs, BETA, input.reshape(-1), trans_eps)\n",
     "\n",
-    "    next_mean = jnp.array([d1, d2, d3, d4]) + start_state\n",
-    "    next_state = next_mean + state_eps * 0.1\n",
+    "    next_mean = jnp.array([d1, d2, d3, d4]) + start_st\n",
+    "    next_state = next_mean + state_eps * 0.3\n",
     "    return next_state\n",
     "\n",
-    "foo = vmap(vmap(pred, (None, 0, None, None)), (0, None, 0, 0))\n",
+    "foo = vmap(pred, (None, 0, 0, 0, 0, None, None, None, None))\n",
     "\n",
-    "trans = jrandom.normal(SEED, shape=(N, 4))\n",
-    "state = jrandom.normal(SEED, shape=(N, 4))\n",
-    "omega = jrandom.normal(SEED, shape=(N, NUM_FEATURES, 2))\n",
-    "phi = jrandom.uniform(SEED, minval=0, maxval=2 * jnp.pi, shape=(N, NUM_FEATURES,))\n",
+    "keys = jrandom.split(SEED, num=4)\n",
+    "state = jrandom.normal(keys[0], shape=(N, 4))\n",
+    "trans = jrandom.normal(keys[1], shape=(N, 4))\n",
+    "omega = jrandom.normal(keys[2], shape=(N, NUM_FEATURES, 2))\n",
+    "phi = jrandom.uniform(keys[3], minval=0, maxval=2 * jnp.pi, shape=(N, NUM_FEATURES,))\n",
     "\n",
-    "predictions = foo(state, trans, omega, phi).mean(axis=(1,0))\n",
-    "print(f\"Pred: {predictions}\")\n",
+    "\n",
+    "predictions_post = foo(jnp.zeros((4,)), state, trans, omega, phi, *trans_models_post).mean(axis=0)\n",
+    "print(f\"Pred: {predictions_post}\")\n",
     "print(f\"True: {env.step(action)[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transitions = replay_buffer.memory[:100]\n",
+    "states = jnp.array(list(map(lambda t: t.state, transitions)))\n",
+    "actions = jnp.array(list(map(lambda t: t.action, transitions)))\n",
+    "next_states = jnp.array(list(map(lambda t: t.next_state, transitions)))\n",
+    "\n",
+    "key = SEED\n",
+    "num_states = 100\n",
+    "pred_next_states = np.zeros((num_states,))\n",
+    "xs = np.linspace(-.3, .3, num_states)\n",
+    "\n",
+    "for i, start_state in enumerate(states):\n",
+    "    key, subkey = jrandom.split(key)\n",
+    "    keys = jrandom.split(subkey, num=4)\n",
+    "\n",
+    "    state_eps = jrandom.normal(keys[0], shape=(N, 4))\n",
+    "    trans_eps = jrandom.normal(keys[1], shape=(N, 4))\n",
+    "    omega = jrandom.normal(keys[2], shape=(N, NUM_FEATURES, 2))\n",
+    "    phi = jrandom.uniform(keys[3], minval=0, maxval=2 * jnp.pi, shape=(N, NUM_FEATURES,))\n",
+    "\n",
+    "    pred_st = foo(start_state, state_eps, trans_eps, omega, phi, *trans_models_post).mean(axis=0)[0]\n",
+    "    pred_next_states[i] = pred_st\n",
+    "\n",
+    "    if i % 20 == 0:\n",
+    "        print(f\"Step {i}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 6))\n",
+    "# plt.vlines(states[:, 0], -0.32, next_states[:, 0], color='orange', linestyle='dashed')\n",
+    "plt.scatter(states[:, 0], next_states[:, 0], color='orange', label=\"True transitions\")\n",
+    "# plt.vlines(states[:, 0], -0.32, pred_next_states, color='cornflowerblue', linestyle='dashed')\n",
+    "plt.scatter(states[:, 0], pred_next_states, color='cornflowerblue', label=\"Predicted transitions\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -190,30 +307,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NOISE = 0.1\n",
+    "N = 10000\n",
+    "eps = 0.0001\n",
+    "\n",
+    "costs = np.zeros((2,))\n",
+    "key = SEED\n",
+    "for j, i in enumerate([-1, 1]):\n",
+    "    keys = jrandom.split(key, num=4)\n",
+    "    state_epsilons = jrandom.normal(key=keys[0], shape=(N, HORIZON, 4))\n",
+    "    trans_epsilons = jrandom.normal(key=keys[1], shape=(N, HORIZON, 4))\n",
+    "    omegas = jrandom.normal(key=keys[2], shape=(N, HORIZON, NUM_FEATURES, 2))\n",
+    "    phis = jrandom.uniform(key=keys[3], minval=0, maxval=2 * jnp.pi, shape=(N, HORIZON, NUM_FEATURES))\n",
+    "\n",
+    "    theta = jnp.array([1., 1., 1., 1., 1 + i * eps])\n",
+    "    trajectories = get_trajectories(\n",
+    "        theta, BETA, env, *trans_models_post, HORIZON, NUM_FEATURES, lengthscales, coefs, NOISE, state_epsilons, trans_epsilons, omegas, phis\n",
+    "        )\n",
+    "    avg_cost = vmap(get_sequence_rewards, (0,))(trajectories).mean()\n",
+    "    costs[j] = avg_cost\n",
+    "    print(avg_cost)\n",
+    "\n",
+    "diff_grad = (costs[1] - costs[0]) / (2 * eps)\n",
+    "print(diff_grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR1: [ 2.3047597e-04  3.2374344e-05 -9.6576869e-06  4.8669985e-08\n",
-      " -1.0052458e-05]\n",
-      "RP1: [ 4.7717482e-08 -1.2887130e-08 -9.7361273e-08 -5.6822959e-08\n",
-      "  2.2752496e-07]\n"
+      "LR: [-0.33891183 -0.05050422 -0.64287704  0.84783596  0.2908255 ]\n",
+      "RP: [ 0.00662371 -0.00318408 -0.00130731 -0.02781972  0.01692043]\n"
      ]
     }
    ],
    "source": [
-    "theta = jnp.full((state_dim + 1,), .9)\n",
+    "theta = jnp.full((state_dim + 1,), 1.)\n",
     "BETA = 1.\n",
     "ALPHA = 0.3\n",
-    "N = 100\n",
+    "N = 1000\n",
     "HORIZON = 10\n",
     "NUM_FEATURES = 1000\n",
-    "NOISE = 0.1\n",
+    "NOISE = 0.2\n",
     "lengthscales = jnp.full((NUM_FEATURES,), .1)\n",
-    "coefs = jnp.full_like(lengthscales, 0.001)\n",
+    "coefs = jnp.full_like(lengthscales, 0.06)\n",
     "\n",
     "model_d1 = prior(NUM_FEATURES, alpha=ALPHA)\n",
     "model_d2 = prior(NUM_FEATURES, alpha=ALPHA)\n",
@@ -222,31 +368,33 @@
     "\n",
     "trans_models = [model_d1, model_d2, model_d3, model_d4]\n",
     "\n",
-    "trans_models = train_transition_models(replay_buffer, BETA, trans_models, NUM_FEATURES, lengthscales, coefs, SEED)\n",
+    "trans_models_post = train_transition_models(replay_buffer, BETA, trans_models, NUM_FEATURES, lengthscales, coefs, SEED)\n",
     "\n",
-    "keys = jrandom.split(SEED, num=4)\n",
+    "model_d1, model_d2, model_d3, model_d4 = trans_models_post\n",
+    "\n",
+    "keys = jrandom.split(SEED, num=7)\n",
     "state_epsilons = jrandom.normal(key=keys[0], shape=(N, HORIZON, 4))\n",
-    "trans_epsilons = jrandom.normal(key=keys[1], shape=(100, HORIZON, 4))\n",
-    "omegas = jrandom.normal(key=keys[2], shape=(N, HORIZON, NUM_FEATURES, 2))\n",
-    "phis = jrandom.uniform(key=keys[3], minval=0, maxval=2 * jnp.pi, shape=(N, HORIZON, NUM_FEATURES))\n",
+    "trans_epsilons = jrandom.normal(key=keys[1], shape=(N, HORIZON, 4))\n",
+    "omegas = jrandom.normal(key=keys[2], shape=(N, NUM_FEATURES, 2))\n",
+    "phis = jrandom.uniform(key=keys[3], minval=0, maxval=2 * jnp.pi, shape=(N, NUM_FEATURES))\n",
+    "extra_epsilons = jrandom.normal(key=keys[4], shape=(N, HORIZON, 4))\n",
+    "extra_omegas = jrandom.normal(key=keys[5], shape=(N, NUM_FEATURES, 2))\n",
+    "extra_phis = jrandom.uniform(key=keys[6], minval=0, maxval=2 * jnp.pi, shape=(N, NUM_FEATURES,))\n",
     "\n",
     "# LR gradients\n",
     "trajectories = get_trajectories(\n",
-    "    theta, BETA, env, *trans_models, HORIZON, NUM_FEATURES, lengthscales, coefs, NOISE, state_epsilons, trans_epsilons, omegas, phis\n",
+    "    theta, BETA, env, *trans_models_post, HORIZON, NUM_FEATURES, lengthscales, coefs, NOISE, state_epsilons, trans_epsilons, omegas, phis\n",
     "    )\n",
     "lr_grads = lr_gradients(\n",
-    "    theta, BETA, *trans_models, HORIZON, NUM_FEATURES, lengthscales, coefs, NOISE, trajectories, trans_epsilons, omegas, phis\n",
+    "    theta, BETA, *trans_models_post, HORIZON, NUM_FEATURES, lengthscales, coefs, NOISE, trajectories, trans_epsilons, omegas, phis\n",
     "    )\n",
-    "print(f\"LR1: {lr_grads}\")\n",
+    "print(f\"LR: {lr_grads}\")\n",
     "\n",
     "# RP gradients\n",
     "rp_grads = policy_grad(\n",
-    "    theta, BETA, *trans_models, env, HORIZON, NUM_FEATURES, lengthscales, coefs, NOISE, state_epsilons, trans_epsilons, omegas, phis\n",
+    "    theta, BETA, *trans_models_post, env, HORIZON, NUM_FEATURES, lengthscales, coefs, NOISE, state_epsilons, trans_epsilons, omegas, phis\n",
     ")\n",
-    "print(f\"RP1: {rp_grads}\")\n",
-    "# rp_grads = trajectory_value(\n",
-    "#     theta, BETA, jnp.zeros((4,)), *trans_models, jnp.arange(HORIZON - 1), NUM_FEATURES, lengthscales, coefs, NOISE, state_epsilons[0], trans_epsilons[0], omegas[0], phis[0]\n",
-    "# )\n"
+    "print(f\"RP: {rp_grads}\")\n"
    ]
   },
   {
@@ -266,17 +414,17 @@
     "NOISE = 0.1\n",
     "HORIZON = 10\n",
     "TEST_HORIZON = 50\n",
-    "N_STATES = 100\n",
-    "N_TRANS = 100\n",
+    "N = 1000\n",
     "TRAIN_LOOPS = 5\n",
     "key = SEED\n",
     "\n",
+    "trans_models = trans_models_post\n",
     "\n",
     "theta = jnp.full((state_dim + 1,), 0.)\n",
     "params = jnp.array([theta])\n",
     "\n",
     "optimizer = optax.chain(\n",
-    "    optax.adam(learning_rate=0.005),\n",
+    "    optax.adam(learning_rate=0.008),\n",
     "    # optax.scale(-1.0)\n",
     ")\n",
     "\n",
@@ -286,10 +434,10 @@
     "    subkeys = jrandom.split(key, num=6)\n",
     "    key = subkeys[0]\n",
     "\n",
-    "    state_epsilons = jrandom.normal(key=subkeys[1], shape=(N_STATES, HORIZON, 4))\n",
-    "    trans_epsilons = jrandom.normal(key=subkeys[2], shape=(N_TRANS, HORIZON, 4))\n",
-    "    omegas = jrandom.normal(key=subkeys[3], shape=(N_STATES, HORIZON, NUM_FEATURES, 2))\n",
-    "    phis = jrandom.uniform(key=subkeys[4], minval=0, maxval=2 * jnp.pi, shape=(N_STATES, HORIZON, NUM_FEATURES))\n",
+    "    state_epsilons = jrandom.normal(key=subkeys[1], shape=(N, HORIZON, 4))\n",
+    "    trans_epsilons = jrandom.normal(key=subkeys[2], shape=(N, HORIZON, 4))\n",
+    "    omegas = jrandom.normal(key=subkeys[3], shape=(N, HORIZON, NUM_FEATURES, 2))\n",
+    "    phis = jrandom.uniform(key=subkeys[4], minval=0, maxval=2 * jnp.pi, shape=(N, HORIZON, NUM_FEATURES))\n",
     "\n",
     "    # Train model with all available data\n",
     "    trans_models = train_transition_models(\n",
@@ -326,7 +474,7 @@
     "    # Roll-out policy online for an episode and add to replay buffer\n",
     "    cur_obj = rollout_episode(env, TEST_HORIZON, replay_buffer, theta)\n",
     "\n",
-    "    if ep % 5 == 0:\n",
+    "    if ep % 1 == 0:\n",
     "        print(f\"Ep {ep}, objective: {cur_obj}, theta: {theta}\")\n",
     "\n",
     "\n",
