Rename files in model_based_rl folder

--- a/model_based_rl/inv_pendu_rbf_main.ipynb
+++ b/model_based_rl/inv_pendu_rbf_main.ipynb
@@ -29,7 +29,7 @@
     "from replay_buffer import ReplayBuffer\n",
     "from constants import SEED\n",
     "from policy import policy_grad, lr_gradients\n",
-    "from pilco_utils import get_trajectories, rollout_episode\n",
+    "from utils import get_trajectories, rollout_episode\n",
     "from trans_model import prior, train_transition_models, lklhood_grad, marg_lklhood, trans_output, train_rbf_transition_models\n",
     "from neural_nets import get_params\n",
     "from rbf import rbf_multidim"
